// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConflictResolutionComponent Path text field displayed 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <StyledChoiceGroup
    label="Mode"
    onChange={[Function]}
    options={
      [
        {
          "key": "LastWriterWins",
          "text": "Last Write Wins (default)",
        },
        {
          "key": "Custom",
          "text": "Merge Procedure (custom)",
        },
      ]
    }
    selectedKey="LastWriterWins"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": undefined,
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": undefined,
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <StyledTextFieldBase
    id="conflictResolutionLwwTextField"
    label="Conflict Resolver Property"
    onChange={[Function]}
    onRenderLabel={[Function]}
    styles={
      {
        "fieldGroup": {
          "borderColor": "",
          "height": 25,
          "selectors": {
            ":disabled": {
              "backgroundColor": undefined,
              "borderColor": undefined,
            },
          },
          "width": 300,
        },
      }
    }
    value=""
  />
</Stack>
`;

exports[`ConflictResolutionComponent Sproc text field displayed 1`] = `
<Stack
  tokens={
    {
      "childrenGap": 20,
    }
  }
>
  <StyledChoiceGroup
    label="Mode"
    onChange={[Function]}
    options={
      [
        {
          "key": "LastWriterWins",
          "text": "Last Write Wins (default)",
        },
        {
          "key": "Custom",
          "text": "Merge Procedure (custom)",
        },
      ]
    }
    selectedKey="Custom"
    styles={
      {
        "flexContainer": [
          {
            "columnGap": "default",
            "display": "default",
            "selectors": {
              ".ms-ChoiceField-field.is-checked::after": {
                "borderColor": "",
              },
              ".ms-ChoiceField-field.is-checked::before": {
                "borderColor": "",
              },
              ".ms-ChoiceField-wrapper label": {
                "fontFamily": undefined,
                "fontSize": 14,
                "padding": "2px 5px",
                "whiteSpace": "nowrap",
              },
            },
          },
        ],
      }
    }
  />
  <StyledTextFieldBase
    id="conflictResolutionCustomTextField"
    label="Stored procedure"
    onChange={[Function]}
    onRenderLabel={[Function]}
    styles={
      {
        "fieldGroup": {
          "borderColor": "",
          "height": 25,
          "selectors": {
            ":disabled": {
              "backgroundColor": undefined,
              "borderColor": undefined,
            },
          },
          "width": 300,
        },
      }
    }
    value=""
  />
</Stack>
`;
